test: enhance GlobalExceptionHandlerTest with null checks and assertion improvements